All integration tests done